--- a/front/package.json
+++ b/front/package.json
@@ -20,10 +20,10 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "react-spinkit": "^3.0.0",
-    "react-tooltip": "^4.2.6",
     "react-youtube": "^7.11.2",
     "react-zoom-pan-pinch": "^1.6.1",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "styled-components": "^5.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
