zoom-pin-patch youtube & image v1.0

--- a/front/package.json
+++ b/front/package.json
@@ -22,8 +22,7 @@
     "react-spinkit": "^3.0.0",
     "react-youtube": "^7.11.2",
     "react-zoom-pan-pinch": "^1.6.1",
-    "redux": "^4.0.5",
-    "styled-components": "^5.1.1"
+    "redux": "^4.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
