--- a/back/package.json
+++ b/back/package.json
@@ -3,32 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.12",
-    "@fortawesome/free-brands-svg-icons": "^5.6.3",
-    "@fortawesome/free-regular-svg-icons": "^5.6.3",
-    "@fortawesome/free-solid-svg-icons": "^5.6.3",
-    "@fortawesome/react-fontawesome": "^0.1.3",
-    "is-image-url": "^1.1.8",
-    "node-sass": "^4.14.1",
-    "query-string": "^6.12.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-fontawesome": "^1.6.1",
-    "react-recaptcha": "^2.3.10",
-    "react-redux": "^7.2.0",
-    "react-rnd": "^10.1.10",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1",
-    "react-spinkit": "^3.0.0",
-    "react-youtube": "^7.11.2",
-    "react-zoom-pan-pinch": "^1.6.1",
-    "redux": "^4.0.5"
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "*",
+    "handlebars": "*",
+    "mongoose": "^5.9.27",
+    "nconf": "*",
+    "node-sqlite": "0.0.2-security",
+    "nodemailer": "^6.4.11",
+    "open-easyrtc": "*",
+    "request": "^2.88.2",
+    "socket.io": "*"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "doc": "./node_modules/.bin/jsdoc -r public --destination doc --readme README.md -c .jsdocrc",
+    "lint": "eslint --ext .js -c .eslintrc .",
+    "start": "node server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "eslintConfig": {
     "extends": "react-app"
