--- a/back/package.json
+++ b/back/package.json
@@ -12,7 +12,10 @@
     "node-sqlite": "0.0.2-security",
     "nodemailer": "^6.4.11",
     "open-easyrtc": "*",
+    "peer": "^0.5.3",
+    "peerjs": "^1.3.1",
     "request": "^2.88.2",
+    "rtcmulticonnection-server": "^1.3.2",
     "socket.io": "*"
   },
   "scripts": {
