--- a/front/package.json
+++ b/front/package.json
@@ -10,6 +10,7 @@
     "@fortawesome/react-fontawesome": "^0.1.3",
     "is-image-url": "^1.1.8",
     "node-sass": "^4.14.1",
+    "peerjs": "^1.3.1",
     "query-string": "^6.12.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -19,6 +20,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "react-spinkit": "^3.0.0",
+    "react-toastify": "^6.0.8",
     "react-youtube": "^7.11.2",
     "redux": "^4.0.5"
   },
