--- a/front/package.json
+++ b/front/package.json
@@ -18,7 +18,7 @@
     "react-recaptcha": "^2.3.10",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^3.4.3",
     "react-spinkit": "^3.0.0",
     "react-toastify": "^6.0.8",
     "react-youtube": "^7.11.2",
