--- a/back/package.json
+++ b/back/package.json
@@ -5,18 +5,21 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "errorhandler": "^1.5.1",
     "express": "*",
     "handlebars": "*",
+    "ip": "^1.1.5",
     "mongoose": "^5.9.27",
     "nconf": "*",
     "node-sqlite": "0.0.2-security",
     "nodemailer": "^6.4.11",
     "open-easyrtc": "*",
+    "path": "^0.12.7",
     "peer": "^0.5.3",
     "peerjs": "^1.3.1",
     "request": "^2.88.2",
-    "rtcmulticonnection-server": "^1.3.2",
-    "socket.io": "*"
+    "socket.io": "*",
+    "ws": "^7.3.1"
   },
   "scripts": {
     "doc": "./node_modules/.bin/jsdoc -r public --destination doc --readme README.md -c .jsdocrc",
